rft